--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "book_site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://books.joshnassif.com/",
   "dependencies": {
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -9,6 +10,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "stop": "taskkill -F -IM node.exe",
+    "predeploy": "npm run build",
+    "deploy": "aws s3 sync build/ s3://books.joshnassif.com",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
