--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "homepage": "http://books.joshnassif.com/",
   "dependencies": {
+    "aws-amplify": "^1.1.40",
+    "bootstrap": "^4.3.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.2.0"
   },
