--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "http://books.joshnassif.com/",
   "dependencies": {
     "aws-amplify": "^1.1.40",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
